--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><span>WebS</span>tudio</a>
+      <a href="index.html"><span>Web</span>Studio</a>
       <nav>
         <ul>
           <li><a href="#Studio">Studio</a></li>
@@ -104,7 +104,7 @@
       <!-- кінець секції Contact -->
     </main>
     <footer>
-      <a href="index.html"><span>WebS</span>tudio</a>
+      <a href="index.html"><span>Web</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
