Renamed img and Modified index.html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <li>
             <img
               h
-              src="images/Mark Guerrero.jpg"
+              src="images/MarkGuerrero.jpg"
               alt="Mark Guerrero"
               width="264"
             />
@@ -77,13 +77,13 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/Tom Ford.jpg" alt="Tom Ford" width="264" />
+            <img src="images/TomFord.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="images/Camila Garcia.jpg"
+              src="images/CamilaGarcia.jpg"
               alt="Camila Garcia"
               width="264"
             />
@@ -92,7 +92,7 @@
           </li>
           <li>
             <img
-              src="images/Daniel Wilson.jpg"
+              src="images/DanielWilson.jpg"
               alt="Daniel Wilson"
               width="264"
             />
