--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><span>Web</span>Studio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="#Studio">Studio</a></li>
           <li><a href="#Portfolio">Portfolio</a></li>
           <li><a href="#Contact">Contact</a></li>
         </ul>
       </nav>
-      <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-      </div>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <!-- секція Studio -->
@@ -68,7 +70,7 @@
         <ul>
           <li>
             <img
-              src="images/MarkGuerrero.jpg"
+              src="./images/MarkGuerrero.jpg"
               alt="Mark Guerrero"
               width="264"
             />
@@ -76,13 +78,13 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/TomFord.jpg" alt="Tom Ford" width="264" />
+            <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="images/CamilaGarcia.jpg"
+              src="./images/CamilaGarcia.jpg"
               alt="Camila Garcia"
               width="264"
             />
@@ -91,7 +93,7 @@
           </li>
           <li>
             <img
-              src="images/DanielWilson.jpg"
+              src="./images/DanielWilson.jpg"
               alt="Daniel Wilson"
               width="264"
             />
@@ -103,7 +105,7 @@
       <!-- кінець секції Contact -->
     </main>
     <footer>
-      <a href="index.html"><span>Web</span>Studio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
