--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
           <li><a href="#Studio">Studio</a></li>
           <li><a href="#Portfolio">Portfolio</a></li>
-          <li><a href="#Contact">Contact</a></li>
+          <li><a href="#Contacts">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -65,7 +65,7 @@
       </section>
       <!-- кінець секції Portfolio -->
       <!-- секція Contact -->
-      <section id="Contact">
+      <section id="#Contacts">
         <h2>Our Team</h2>
         <ul>
           <li>
